--- a/Challenger/StoryBoards/Base.lproj/Cadastro.storyboard
+++ b/Challenger/StoryBoards/Base.lproj/Cadastro.storyboard
@@ -223,6 +223,6 @@
         <image name="logo_dos_meninos.png" width="702" height="710"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ZvD-G1-O5e"/>
+        <segue reference="ZYi-qd-T3n"/>
     </inferredMetricsTieBreakers>
 </document>
